# notification/model/model.go
@@ -4,4 +4,5 @@ type Send struct {
 	Message string
 	Userid  string
 	ContractId string
+	CreatedAt string
 }
